--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,10 @@ inputs:
   destination_ssh_private_key:
     description: SSH key used to authenticate with destination ssh url provided (optional if public or https url with authentication)
     required: false
+  push_lfs_all:
+    description: Push all LFS files before the force push (optional)
+    required: false
+
 runs:
   using: 'docker'
   image: 'Dockerfile'
@@ -38,3 +42,4 @@ runs:
     - ${{ inputs.source_branch }}
     - ${{ inputs.destination_repo }}
     - ${{ inputs.destination_branch }}
+    - ${{ inputs.push_lfs_all }}
