--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,7 @@ inputs:
   destination_ssh_private_key:
     description: SSH key used to authenticate with destination ssh url provided (optional if public or https url with authentication)
     required: false
-  push_lfs_all:
+  push_lfs:
     description: Push all LFS files before the force push (optional)
     required: false
     type: boolean
@@ -44,4 +44,4 @@ runs:
     - ${{ inputs.source_branch }}
     - ${{ inputs.destination_repo }}
     - ${{ inputs.destination_branch }}
-    - ${{ inputs.push_lfs_all }}
+    - ${{ inputs.push_lfs }}
